[gd_scene load_steps=6 format=2]

[ext_resource path="res://Karakter/Hero.gd" type="Script" id=1]
[ext_resource path="res://Karakter/HeroTanpaPedang.tres" type="SpriteFrames" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 14 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.5, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 11.5, 8.5 )

[node name="Hero" type="KinematicBody2D" groups=["Player"]]
collision_mask = 30
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 3, 0 )
frames = ExtResource( 2 )
animation = "Diam"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -2 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_bottom = 400
drag_margin_h_enabled = true
drag_margin_v_enabled = true
editor_draw_limits = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="serang" type="Area2D" parent="." groups=["pedang"]]

[node name="CollisionPedang" type="CollisionShape2D" parent="serang"]
position = Vector2( 23.5, 4 )
shape = SubResource( 2 )
disabled = true

[node name="CollisionPedang2" type="CollisionShape2D" parent="serang"]
position = Vector2( -18, 4 )
shape = SubResource( 2 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.5, 1.5 )
shape = SubResource( 3 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
